--- a/blnt_tea1/package.json
+++ b/blnt_tea1/package.json
@@ -1,8 +1,7 @@
 {
   "name": "blnt_tea1",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
+    "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -22,5 +21,17 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/blntbytk/blnt_tea1.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/blntbytk/blnt_tea1/issues"
+  },
+  "homepage": "https://github.com/blntbytk/blnt_tea1#readme"
 }
